force-app/main/default/objects/Employee__c/fields/Dept_1__c.field-meta.xml
<CustomField>
    <fullName>Dept_1__c</fullName>
    <formula>IF(
    CONTAINS(Department__c, &quot;|&quot;),
    LEFT(Department__c, FIND(&quot;|&quot;, Department__c) - 1),
    Department__c
)</formula>
    <label>Dept 1</label>
    <type>Text</type>
</CustomField>