force-app/main/default/objects/Employee__c/fields/Dept_2__c.field-meta.xml
<CustomField>
    <fullName>Dept_2__c</fullName>
    <formula>IF(
    CONTAINS(Department__c, &quot;|&quot;),
    IF(
        FIND(&quot;|&quot;, Department__c, FIND(&quot;|&quot;, Department__c) + 1) &gt; 0,
        MID(
            Department__c,
            FIND(&quot;|&quot;, Department__c) + 1,
            FIND(&quot;|&quot;, Department__c, FIND(&quot;|&quot;, Department__c) + 1) - FIND(&quot;|&quot;, Department__c) - 1
        ),
        RIGHT(Department__c, LEN(Department__c) - FIND(&quot;|&quot;, Department__c))
    ),
    &quot;&quot;
)</formula>
    <label>Dept 2</label>
    <type>Text</type>
</CustomField>