force-app/main/default/objects/Employee__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date employment ended for this employee.</description>
    <inlineHelpText>Blank if an Active employee</inlineHelpText>
    <label>Most Recent End Date</label>
    <type>Date</type>
</CustomField>