force-app/main/default/objects/Employee__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <description>Yes or blank.</description>
    <label>Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>