force-app/main/default/objects/Employee__c/fields/LOA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_End_Date__c</fullName>
    <description>Leave of Absence end date</description>
    <inlineHelpText>Leave of Absence end date</inlineHelpText>
    <label>LOA End Date</label>
    <length>32</length>
    <type>Text</type>
</CustomField>