force-app/main/default/objects/Employee__c/fields/LOA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Start_Date__c</fullName>
    <description>Leave of Absence start date</description>
    <inlineHelpText>Leave of Absence start date</inlineHelpText>
    <label>LOA Start Date</label>
    <type>Date</type>
</CustomField>