force-app/main/default/objects/Employee__c/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date__c</fullName>
    <description>The original date an employee was hired.</description>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>