force-app/main/default/objects/Employee__c/fields/Sacramento_County__c.field-meta.xml
<CustomField>
    <fullName>Sacramento_County__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Used to indicate that this person or location is in Sacramento County for property tax purposes.</inlineHelpText>
    <label>Sacramento County</label>
    <type>Checkbox</type>
</CustomField>