force-app/main/default/objects/Employee__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Lookup to the user record for employees that have a Salesforce license.  (Not all of the Employees will have this.)</description>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>