force-app/main/default/objects/Employee__c/fields/Salesforce_User_License__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_License__c</fullName>
    <description
  >Using the &quot;Division&quot; text field on the User object to record the Salesforce User License name. This field indirectly pulls in the Salesforce User License name to an Employee report.</description>
    <formula>RIGHT(
  Salesforce_User__r.Division,
  LEN(Salesforce_User__r.Division)-25
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce User License</label>
    <type>Text</type>
</CustomField>