force-app/main/default/objects/Employee__c/fields/Salesforce_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Profile__c</fullName>
    <formula>Salesforce_User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce User Profile</label>
    <type>Text</type>
</CustomField>