force-app/main/default/objects/Employee__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date employment started for this employee.</description>
    <label>Most Recent Start Date</label>
    <type>Date</type>
</CustomField>