force-app/main/default/objects/Employee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Temp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>