force-app/main/default/objects/Employee__c/fields/View_Assets__c.field-meta.xml
<CustomField>
    <fullName>View_Assets__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/Report/00O1O000009GzCyUAK/view?fv0=&quot;&amp;Id, &quot;View Assets&quot;)</formula>
    <label>View Assets</label>
    <type>Text</type>
</CustomField>