force-app/main/default/objects/Employee__c/fields/View_Dept_Licenses__c.field-meta.xml
<CustomField>
    <fullName>View_Dept_Licenses__c</fullName>
    <description
  >To enable one-click access from the Employee record to view all licenses for that Employee&apos;s Department.</description>
    <formula
  >HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/Report/00OJw000008z4zlMAA/view?fv2=&quot;&amp;Department__c, &quot;View Department Licenses&quot;)</formula>
    <label>View Department Licenses</label>
    <type>Text</type>
</CustomField>