force-app/main/default/objects/Employee__c/listViews/Active_Employees.listView-meta.xml
<ListView>
    <fullName>Active_Employees</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Department__c</columns>
    <columns>State__c</columns>
    <columns>Salesforce_User__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Email__c</columns>
    <columns>View_Assets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Contractor,Employee,Temp</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Employees</label>
</ListView>