force-app/main/default/objects/Employee__c/listViews/Employees.listView-meta.xml
<ListView>
    <fullName>Employees</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>State__c</columns>
    <columns>Salesforce_User__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee</value>
    </filters>
    <label>Employees - All Time</label>
</ListView>