force-app/main/default/objects/Employee__c/listViews/Locations.listView-meta.xml
<ListView>
    <fullName>Locations</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Location</value>
    </filters>
    <label>Locations</label>
</ListView>